addition of language change in the menu to create macOS installation, and installation of hardware patches
addition of language change in the menu to create macOS installation, and installation of hardware patches

--- a/oclp_mod/languages/en_US.json
+++ b/oclp_mod/languages/en_US.json
@@ -86,14 +86,84 @@
     "Disable_CPUFriend":"Disable CPUFriend",
     "Photos,this_may_delay.":"Photos, this may delay.",
     "CPU_usage":"CPU usage",
+    "SATA_power_management":"SATA Power Management",
+    "NVMepowermanagement":"NVME Power Management",
+    "Third-partySATApowermanagement":"3P SATA Power Management",
     "RegardingiCloudusing3802-BasedGPUs":"Regarding iCloud using 3802-Based GPUs",
     "Disablethemediaanalysisdservice":"Disable the mediaanalysisd service",
     "DisableCPUFriendforunsupportedmodels.":"Disable CPUFriend for unsupported models.",
     "Regarding_the_malfunction":"Regarding the malfunction",
     "Allow_exposing_iGPU_in_Windows":"Allow exposing iGPU in Windows",
     "UsedfordGPU-basedMacBooks":"Used for dGPU-based MacBooks",
+    "DisabledondowngradedNVRAMsystem.":"Disabled on downgraded NVRAM system.",
     "PCHmayoccasionallycrashonMacBookPro11,x.":"PCH may occasionally crash on\nMacBook Pro 11,x.",
     "Causes_performance_degradation":"Causes performance degradation",
+    "Allow_the_use_of_AppleALC_audio":"Allow the use of AppleALC audio",
+    "WritetoNVRAM":"Write to NVRAM",
+    "Trim_related":"Trim related",
+    "DownloadthemacOSinstaller(.app)":"Download the macOS installer (.app)",
+    "Selectthelocalinstaller(.app)":"Select the local installer (.app)",
+    "Downloadthethree-partitionimage(.dmg)":"Download the three-partition image (.dmg)",
+    "BurnDMGimage(.dmg)":"Burn DMG image (.dmg)",
+    "SSDsmayalsobenefitfromdisablingthisfeature.":"SSDs may also benefit from disabling this\nfeature.",
+    "Itisrecommendedthatallusersuseit,evenifthereareissues.":"It is recommended that all users use it, even if\nthere are issues.",
+    "Third-partyNVMepowermanagement":"3P NVMe Power Management",
+    "EnableunprovidedfeaturesinmacOS":"Enable unprovided features in macOS",
+    "AllowOpenCoretowritetoNVRAM.":"Allow OpenCore to write to NVRAM.",
+    "Incaseoramalfunctionor":"In case of a malfunction or",
+    "CreateamacOSinstaller":"Create a macOS installer",
+    "FindalocalmacOSinstaller":"Find a local macOS installer",
+    "SelectSimpleHacDMGimage" :"Select SimpleHac DMG image",
+    "Download":"Download",
+    "The_macOS_installer_has_been_successfully_created!":"The macOS installer has been successfully created!",
+    "DownloadtheselectedDMG":"Download the selected DMG",
+    "Copy_link":"Copy link",
+    "Download_the_image_from_SimpleHac_OSS":"Download the image from SimpleHac OSS",
+    "Download_the_selected_macOS":"Download the selected macOS",
+    "Choose_this_macOS":"Choose this macOS",
+    "Show_old_version/test_version":"Show old version/test version",
+    "Choose_the_macOS_installer":"Choose the macOS installer",
+    "Copy_the_download_link_of_the_selected_DMG.":"Copy the download link of the selected DMG.",
+    "ChoosethisimagesupportedbySimpleHac":"Choose this image supported by SimpleHac",
+    "LookingfordownloadableDMGimages":"Looking For Downloaded",
+    "Searchingforavailabledownloadableversions.":"Searching",
+    "Copied_to_clipboard":"Copied to clipboard",
+    "Error":"Error",
+    "No_patch_needed":"No patch needed",
+    "unable_to_install_patch":"Unable to install the patch, reason: ",
+    "All_patches_have_been_installed.":"All patches have been installed.",
+    "Install_driver_patch" :"Install driver patch",
+    "Scan_again":"Scan again",
+    "No_available_hard_disk_found.":"No available hard disk found.",
+    "The_selected_USB_drive_will_be_formatted!":"The selected USB drive will be formatted!",
+    "Select_local_hard_drive":"Select local hard drive",
+    "Retrieve_local_hard_drive_information":"Retrieve local hard drive information",
+    "it_seems":"It seems that there is no installer in the application folder.",
+    "Select_the_local_macOS_installer":"Select the local macOS installer",
+    "due_to":"Due to busy studies, this part is not finished (gui_simplehac_dmg_flash.py is an incomplete product), please download etcher to burn it yourself! Now opening SimpleHac accelerated image to download etcher for you.",
+    "Selected_the_directory":"Selected the directory",
+    "Select_save_directory":"Select save directory",
+    "written":"Written: 0.00 MB",
+    "Version":"Version",
+    "kdk_download":"KDK Download",
+    "Retrieving_KDK_information...":"Retrieving KDK information...",
+    "remove_the_installer_patch":"Remove the installed patches",
+    "Start_installing_the_driver_patch":"Start installing the driver patch",
+    "last_patch_installation_time":"Last patch installation time:",
+    "Installable_patches":"Installable patches",
+    "Settings":"Settings",
+    "Verification":"Verification",
+    "matching_available_patch":"Matching available patches for installation",
+    "verifying_the_installer":"Verifying the installer...",
+    "Theinstallerwascreatedsuccessfully.DoyouwanttocontinueandinstallOpenCoreon_this_disk?":"The installer was created successfully. Do you want to continue and install OpenCore on this disk?",
+    "this_installer_has_been_created":"The installer has been created successfully! If you want to install OpenCore to this USB, you need to change the target model in the settings.",
+    "the_macos_installer-has_been_succesfully":"The macOS installer has been successfully created!",
+    "devending":"Depending on the device speed, it may take 30 minutes or even longer.",
+    "you_can_go_to_other_things":"You can go do other things, such as checking out the SimpleHac resource community, and it will remind you when you finish.",
+    "Failed_to_obtain_DMG_information,please_contact_laobamac.":"Failed to obtain DMG information, please contact laobamac.",
+    "Unable_to_find_the_download_link.":"Unable to find the download link.",
+    "AllowAppleALCtomanageaudioifapplicable.":"Allow AppleALC to manage audio if applicable.",
+    "DisabledonlywhenthehostlackstheGOPROM.":"Disabled only when the host lacks the\nGOP ROM.",
     "Themodelthatthepatcherisgoingtoimitate.":"The model that the patcher is going to imitate.",
     "Disabled_by_default":"Disabled by default, as it may occur from the\nwake state on certain systems.",
     "enable_fireware_driver":"Enable FireWire Driver"
