--- a/oclp_mod/languages/id_ID.json
+++ b/oclp_mod/languages/id_ID.json
@@ -89,11 +89,81 @@
     "Disable_CPUFriend":"Nonaktifkan CPUFriend",
     "Photos,this_may_delay.":"Foto, ini mungkin tertunda.",
     "CPU_usage":"Penggunaan CPU",
+    "WritetoNVRAM":"Tulis ke NVRAM",
+    "SATA_power_management":"Management Power SATA",
+    "Trim_related":"Trim terkait",
+    "SSDsmayalsobenefitfromdisablingthisfeature.":"SSD mungkin juga mendapat manfaat dari\nmenonaktifkan fitur ini.",
+    "Itisrecommendedthatallusersuseit,evenifthereareissues.":"Disarankan agar semua pengguna\nmenggunakannya, bahkan jika ada masalah.",
+    "Third-partySATApowermanagement":"Manajemen daya SATA pihak ketiga",
+    "NVMepowermanagement":"Management Power NVME",
+    "DisabledondowngradedNVRAMsystem.":"Dinonaktifkan pada sistem NVRAM yang\nditurunkan.",
+    "Incaseoramalfunctionor":"Jika terjadi kerusakan atau",
+    "AllowOpenCoretowritetoNVRAM.":"Izinkan OpenCore untuk menulis ke NVRAM.",
+    "CreateamacOSinstaller":"Buat penginstallan MacOS",
+    "DownloadthemacOSinstaller(.app)":"Download MacOS Installer (.app)",
+    "Selectthelocalinstaller(.app)":"Pilih Installer Dari Local (.app)",
+    "Downloadthethree-partitionimage(.dmg)":"Unduh image tiga partisi (.dmg)",
+    "BurnDMGimage(.dmg)":"Bakar gambar DMG (.dmg)",
+    "Searchingforavailabledownloadableversions.":"Mencari versi",
+    "LookingfordownloadableDMGimages":"Mencari DMG Image",
+    "FindalocalmacOSinstaller":"Mencari MacOS Installer Di Local",
+    "Download":"Unduh",
+    "DownloadtheselectedDMG":"Download DMG Yang Dipilih",
+    "Copy_link":"Salink link",
+    "Choose_this_macOS":"Pilih macOS ini",
+    "last_patch_installation_time":"Waktu pemasangan patch terakhir:",
+    "Download_the_selected_macOS":"Unduh macOS yang dipilih",
+    "Show_old_version/test_version":"Tampilkan versi lama/versi tes",
+    "Download_the_image_from_SimpleHac_OSS":"Unduh Image dari SimpleHac OSS",
+    "Choose_the_macOS_installer":"Pilih installer macOS",
+    "Copied_to_clipboard":"Telah berhasil disalin ke papan salinan",
+    "Unable_to_find_the_download_link.":"Gagal mencari link download.",
+    "Copy_the_download_link_of_the_selected_DMG.":"Salin link unduh, dari DMG yang dipilih",
+    "SelectSimpleHacDMGimage" :"Pilih SimpelHAC Dmg Image",
+    "Error":"Error",
+    "Version":"Versi",
+    "kdk_download":"Download KDK",
+    "remove_the_installer_patch":"Hapus tambalan",
+    "Start_installing_the_driver_patch":"Memulai pemasangan",
+    "Settings":"Pengaturan",
+    "Retrieving_KDK_information...":"Mengambil informasi KDK...",
+    "unable_to_install_patch":"Tidak dapat memasang tambalan. alasan :",
+    "All_patches_have_been_installed.":"Semua tambalan telah dipasang..",
+    "Verification":"Verifikasi",
+    "No_patch_needed":"Tidak ada tambalan yang diperlukan",
+    "Installable_patches":"Tambalan yang dapat dipasang",
+    "Install_driver_patch" :"Pasang tambalan driver",
+    "matching_available_patch":"Mencocokkan tambalan yang tersedia untuk diinstal",
+    "Scan_again":"Pindai ulang",
+    "written":"Ditulis: 0.00 MB",
+    "the_macos_installer-has_been_succesfully":"Installer macOS telah berhasil dibuat!",
+    "verifying_the_installer":"Memverifikasi installer...",
+    "this_installer_has_been_created":"Penginstal telah berhasil dibuat! Jika Anda ingin menginstal OpenCore ke USB ini, Anda perlu mengubah model target di pengaturan.",
+    "you_can_go_to_other_things":"Anda bisa melakukan hal-hal lain, seperti melihat komunitas sumber daya SimpleHac, dan itu akan mengingatkan Anda ketika Anda selesai.",
+    "devending":"Tergantung pada kecepatan perangkat, mungkin perlu waktu 30 menit atau bahkan lebih lama.",
+    "No_available_hard_disk_found.":"Tidak ada hard disk yang tersedia ditemukan.",
+    "The_selected_USB_drive_will_be_formatted!":"USB drive yang dipilih akan diformat!",
+    "Select_local_hard_drive":"Pilih harddisk local",
+    "Retrieve_local_hard_drive_information":"Ambil informasi hard drive lokal",
+    "it_seems":"Sepertinya tidak ada installer di folder aplikasi.",
+    "Select_the_local_macOS_installer":"Pilih macOS Installer di Local",
+    "due_to":"Karena studi yang sibuk, bagian ini belum selesai (gui_simplehac_dmg_flash.py adalah produk yang tidak lengkap), silakan unduh etcher untuk membakar sendiri! Sekarang membuka gambar SimpleHac yang dipercepat untuk mengunduh etcher untuk Anda.",
+    "Selected_the_directory":"Direktori yang dipilih",
+    "The_macOS_installer_has_been_successfully_created!":"Installer macOS telah berhasil dibuat!",
+    "Theinstallerwascreatedsuccessfully.DoyouwanttocontinueandinstallOpenCoreon_this_disk?":"Penginstal berhasil dibuat. Apakah Anda ingin melanjutkan dan menginstal OpenCore di disk ini?",
+    "Select_save_directory":"Pilih direktori untuk menyimpan",
+    "Failed_to_obtain_DMG_information,please_contact_laobamac.":"Gagal memperoleh informasi DMG, silakan hubungi laobamac.",
+    "ChoosethisimagesupportedbySimpleHac":"Pilih image yang disupport oleh SimpelHAC",
+    "DisabledonlywhenthehostlackstheGOPROM.":"Dinonaktifkan hanya ketika host tidak\nmemiliki ROM GOP.",
     "RegardingiCloudusing3802-BasedGPUs":"Mengenai penggunaan GPU berbasis 3802 di iCloud",
     "Disablethemediaanalysisdservice":"Nonaktifkan layanan mediaanalysisd",
     "DisableCPUFriendforunsupportedmodels.":"Nonaktifkan CPUFriend untuk model yang\ntidak didukung.",
     "UsedfordGPU-basedMacBooks":"Digunakan untuk MacBook berbasis dGPU",
     "Allow_exposing_iGPU_in_Windows":"Izinkan mengekspos iGPU di Windows",
+    "Allow_the_use_of_AppleALC_audio":"Izinkan penggunaan audio AppleALC",
+    "Third-partyNVMepowermanagement":"Manajemen daya NVMe pihak ketiga",
+    "EnableunprovidedfeaturesinmacOS":"Aktifkan fitur yang tidak disediakan di macOS",
+    "AllowAppleALCtomanageaudioifapplicable.":"Izinkan AppleALC untuk mengelola audio jika\nberlaku.",
     "PCHmayoccasionallycrashonMacBookPro11,x.":"PCH mungkin kadang-kadang mengalami\nkerusakan pada MacBook Pro 11,x.",
     "Themodelthatthepatcherisgoingtoimitate.":"Patcher akan meniru model mesin yang ingin dipalsukan",
     "Disabled_by_default":"Dinonaktifkan secara default, karena dapat\nterjadi dari keadaan bangun pada sistem tertentu.",
