--- a/oclp_mod/languages/zh_CN.json
+++ b/oclp_mod/languages/zh_CN.json
@@ -88,13 +88,83 @@
     "Allow_exposing_iGPU_in_Windows":"允许在Windows中暴露iGPU",
     "UsedfordGPU-basedMacBooks":"用于基于dGPU的MacBooks。",
     "Disable_CPUFriend":"禁用CPUFriend",
+    "AllowOpenCoretowritetoNVRAM.":"允许OpenCore写入NVRAM。",
+    "Incaseoramalfunctionor":"在有故障或",
+    "SSDsmayalsobenefitfromdisablingthisfeature.":"SSDs 可能也会从禁用此功能中受益。",
+    "CreateamacOSinstaller":"创建macOS安装器",
+    "DisabledondowngradedNVRAMsystem.":"降级的NVRAM系统上禁用。",
+    "Third-partyNVMepowermanagement":"第三方NVMe电源管理",
     "Photos,this_may_delay.":"Photos，这可能会延缓",
     "CPU_usage":"CPU占用",
+    "Trim_related":"Trim相关",
+    "Itisrecommendedthatallusersuseit,evenifthereareissues.":"建议所有用户使用，即使有故障",
+    "SATA_power_management":"SATA 电源管理",
+    "FindalocalmacOSinstaller":"寻找本地的macOS安装器",
+    "DownloadthemacOSinstaller(.app)":"下载macOS安装器（.app）",
+    "Selectthelocalinstaller(.app)":"选择本地的安装器（.app）",
+    "Downloadthethree-partitionimage(.dmg)":"下载三分区镜像（.dmg）",
+    "BurnDMGimage(.dmg)":"烧录DMG镜像（.dmg）",
+    "DownloadtheselectedDMG":"下载选定的DMG",
+    "Searchingforavailabledownloadableversions.":"正在查找可下载的版本",
+    "LookingfordownloadableDMGimages":"正在查找可下载的DMG镜像",
+    "SelectSimpleHacDMGimage" :"选择SimpleHac DMG镜像",
+    "ChoosethisimagesupportedbySimpleHac":"选择此镜像 由SimpleHac提供支持",
+    "Download":"下载",
+    "Copy_link":"复制链接",
+    "Choose_this_macOS":"选择此macOS",
+    "Download_the_selected_macOS":"下载选定的macOS",
+    "Choose_the_macOS_installer":"选择macOS安装器",
+    "Copy_the_download_link_of_the_selected_DMG.":"复制选定DMG的下载链接",
+    "Third-partySATApowermanagement":"第三方SATA电源管理",
+    "EnableunprovidedfeaturesinmacOS":"在 macOS 中启用未被提供的",
+    "NVMepowermanagement":"NVMe 电源管理",
+    "Copied_to_clipboard":"已复制到剪贴板",
+    "Unable_to_find_the_download_link.":"未能找到下载链接",
+    "Error":"错误",
+    "Scan_again":"再次扫描",
+    "No_available_hard_disk_found.":"未找到可用硬盘",
+    "it_seems":"应用程序文件夹内似乎没有安装器",
+    "Select_the_local_macOS_installer":"选择本地的macOS安装器",
+    "due_to":"学业繁忙，此处未完工（gui_simplehac_dmg_flash.py为残品），请下载etcher自行刻录！\n现在为你打开SimpleHac加速镜像下载etcher",
+    "Selected_the_directory":"选择了目录",
+    "Select_save_directory":"选择保存目录",
+    "Failed_to_obtain_DMG_information,please_contact_laobamac.":"未能获取到DMG信息，请联系laobamac",
+    "Download_the_image_from_SimpleHac_OSS":"从SimpleHac OSS下载镜像",
+    "Show_old_version/test_version":"显示老版本/测试版本",
     "DisableCPUFriendforunsupportedmodels.":"禁用不支持型号的 CPUFriend",
     "Disablethemediaanalysisdservice":"禁用mediaanalysisd服务",
     "RegardingiCloudusing3802-BasedGPUs":"对于使用3802-Based GPU的iCloud",
     "PCHmayoccasionallycrashonMacBookPro11,x.":"导致PCH可能会偶尔崩溃的MacBookPro11,x.",
     "Disabled_by_default": "默认情况下禁用，因为在某些系统上从唤醒状态可能会",
+    "Allow_the_use_of_AppleALC_audio":"允许使用AppleALC音频",
+    "DisabledonlywhenthehostlackstheGOPROM.":"仅在主机缺少GOP ROM时禁用。",
+    "WritetoNVRAM":"写入NVRAM",
+    "matching_available_patch":"正在匹配可供安装的补丁",
+    "Installable_patches":"可以安装的补丁",
+    "verifying_the_installer":"验证安装器...",
+    "Settings":"设置",
+    "Verification":"验证",
+    "The_macOS_installer_has_been_successfully_created!":"已成功创建 macOS 安装器！",
+    "Theinstallerwascreatedsuccessfully.DoyouwanttocontinueandinstallOpenCoreon_this_disk?":"安装程序创建成功，是否要继续并将 OpenCore 安装到此磁盘？",
+    "written":"已写入: 0.00 MB",
+    "No_patch_needed":"不需要补丁",
+    "Version":"版本",
+    "kdk_download":"KDK下载",
+    "unable_to_install_patch":"无法安装补丁，原因:",
+    "last_patch_installation_time":"上一次补丁安装时间:",
+    "Start_installing_the_driver_patch":"开始安装驱动补丁",
+    "remove_the_installer_patch":"删除已安装的补丁",
+    "All_patches_have_been_installed.":"所有补丁已安装",
+    "Install_driver_patch" :"安装驱动补丁",
+    "the_macos_installer-has_been_succesfully":"已成功创建 macOS 安装器！",
+    "this_installer_has_been_created":"安装程序创建成功！如果要将 OpenCore 安装到此 USB，则需要在设置中更改目标机型",
+    "devending":"根据设备速度，可能需要30min甚至更久.",
+    "you_can_go_to_other_things":"可以去做其他事情，比如看看SimpleHac资源社，完成会提示你.",
+    "The_selected_USB_drive_will_be_formatted!":"选择的U盘会格式化！",
+    "Select_local_hard_drive":"选择本地硬盘驱动器",
+    "Retrieving_KDK_information...":"正在获取KDK信息...",
+    "Retrieve_local_hard_drive_information":"取回本地硬盘信息",
+    "AllowAppleALCtomanageaudioifapplicable.":"如果适用，允许AppleALC管理音频",
     "Themodelthatthepatcherisgoingtoimitate.": "覆写Patcher将要仿冒的机型",
     "enable_fireware_driver": "启用 FireWire 驱动程序"
 }  
