--- a/oclp_mod/languages/id_ID.json
+++ b/oclp_mod/languages/id_ID.json
@@ -26,7 +26,7 @@
     "download_kdk": "Unduh KDK",
     "change_language": "🇮🇩 Ubah Bahasa",
     "download_ml": "Unduh MetalLib",
-    "model_text": "Model: {model} ，modified by laobamac & satria ramadan",
+    "model_text": "Model: {model}, Di Modifikasi oleh laobamac",
     "unsupported_config": "Kami melihat bahwa Anda saat ini sedang melakukan bootstrapping OpenCore: {model}\n\nKami membangun konfigurasi untuk mencocokkan unit individu dan tidak dapat digunakan dengan yang berbeda Mac Campur atau gunakan kembali.\n\nSilakan membangun dan memasang yang baru OpenCore Konfigurasikan dan kemudian mulai ulang Mac。",
     "language_change_title": "Ubah Bahasa",
     "language_change_prompt": "Pilih Bahasa",
@@ -100,10 +100,10 @@
     "Incaseoramalfunctionor":"Jika terjadi kerusakan atau",
     "AllowOpenCoretowritetoNVRAM.":"Izinkan OpenCore untuk menulis ke NVRAM.",
     "CreateamacOSinstaller":"Buat penginstallan MacOS",
-    "DownloadthemacOSinstaller(.app)":"Download MacOS Installer (.app)",
+    "DownloadthemacOSinstaller(.app)":"Unduh MacOS Installer (.app)",
     "Selectthelocalinstaller(.app)":"Pilih Installer Dari Local (.app)",
-    "Downloadthethree-partitionimage(.dmg)":"Unduh image tiga partisi (.dmg)",
-    "BurnDMGimage(.dmg)":"Bakar gambar DMG (.dmg)",
+    "Downloadthethree-partitionimage(.dmg)":"Unduh image 3 partisi (.dmg)",
+    "BurnDMGimage(.dmg)":"Bakar Image DMG (.dmg)",
     "Searchingforavailabledownloadableversions.":"Mencari versi",
     "LookingfordownloadableDMGimages":"Mencari DMG Image",
     "FindalocalmacOSinstaller":"Mencari MacOS Installer Di Local",
@@ -155,7 +155,7 @@
     "Failed_to_obtain_DMG_information,please_contact_laobamac.":"Gagal memperoleh informasi DMG, silakan hubungi laobamac.",
     "ChoosethisimagesupportedbySimpleHac":"Pilih image yang disupport oleh SimpelHAC",
     "DisabledonlywhenthehostlackstheGOPROM.":"Dinonaktifkan hanya ketika host tidak\nmemiliki ROM GOP.",
-    "RegardingiCloudusing3802-BasedGPUs":"Mengenai penggunaan GPU berbasis 3802 di iCloud",
+    "RegardingiCloudusing3802-BasedGPUs":"Mengenai penggunaan GPU berbasis 3802\ndi iCloud",
     "Disablethemediaanalysisdservice":"Nonaktifkan layanan mediaanalysisd",
     "DisableCPUFriendforunsupportedmodels.":"Nonaktifkan CPUFriend untuk model yang\ntidak didukung.",
     "UsedfordGPU-basedMacBooks":"Digunakan untuk MacBook berbasis dGPU",
@@ -167,5 +167,113 @@
     "PCHmayoccasionallycrashonMacBookPro11,x.":"PCH mungkin kadang-kadang mengalami\nkerusakan pada MacBook Pro 11,x.",
     "Themodelthatthepatcherisgoingtoimitate.":"Patcher akan meniru model mesin yang ingin dipalsukan",
     "Disabled_by_default":"Dinonaktifkan secara default, karena dapat\nterjadi dari keadaan bangun pada sistem tertentu.",
-    "enable_fireware_driver":"Aktifkan driver fireware"
+    "enable_fireware_driver":"Aktifkan driver fireware",
+    "Various_kinds":"Berbagai jenis",
+    "Disable_Firmware_Throttling":"Nonaktifkan Pembatasan Firmware",
+    "Caused_by_lack_of_hardware":"Disebabkan oleh kurangnya perangkat keras",
+    "Forexample,missingmonitors,batteries,etc.":"Misalnya, monitor yang hilang, baterai, dll.",
+    "Disable_firmware-based_restrictions":"Nonaktifkan pembatasan berbasis firmware",
+    "Software_DeMUX":"Perangkat Lunak DeMUX",
+    "Prevent_the_faulty_dGPU_from_being_enabled.":"Mencegah dGPU yang bermasalah diaktifkan",
+    "Note:Relevant_NVRAM_parameters_are_required:":"Catatan: Memerlukan parameter NVRAM yang\nrelevan:",
+    "Enable_software-based_DeMUX":"Aktifkan DeMUX berbasis perangkat lunak",
+    "Enable_unsupported_features":"Aktifkan fitur yang tidak disupport",
+    "Configure_FeatureUnlock_level.":"Konfigurasi tingkat FeatureUnlock.",
+    "Sleep_Plan":"Rencana tidur",
+    "Graphics_card":"Kartu Grafis",
+    "AMD_GOP_injection":"Injeksi AMD GOP",
+    "Inject_AMD_GOP_to_display":"Injeksi AMD GOP untuk ditampilkan",
+    "Start_screen":"Tampilan awal",
+    "Nvidia_GOP_injection":"Injeksi Nvidia GOP",
+    "Inject_Nvidia_Kepler_GOP_for_sisplay":"Injeksi Nvidia Kepler GOP untuk ditampilkan",
+    "Graphics_card_overwrite":"Tulis ulang kartu grafis",
+    "Applicable_to_MXM-based_iMacs.":"Berlaku untuk iMac yang berbasis MXM.",
+    "Cover_detected/hypothetical_MXM_graphics_card":"Deteksi/Asumsi kartu grafis MXM\nyang tercover",
+    "Booting_from_an_external_hard_drive":"Boot dari hard disk eksternal",
+    "Note:This_may_interrupt_from":"Perhatian: Ini mungkin akan mengganggu dari",
+    "Prevent_sleep_issues":"Mencegah masalah tidur",
+    "Load_only_the_minimum_EFI_drivers":"Hanya memuat driver EFI minimum",
+    "Due_to_encountering_unstable_memory.":"Karena mengalami ketidakstabilan memori",
+    "If_your_system_prompts_to_suggest_lowering":"Jika sistem Anda memberi tahu tentang\npenurunan yang disarankan",
+    "Applicable_to_MacBookPro8,2_and_MacBookPro8,3.":"Cocok untuk MacBookPro8,2 dan MacBookPro8,3.",
+    "Security":"Keamanan",
+    "Kernel_Security":"Keamanan Kernel",
+    "When_the_system_files_are_needed":"Saat membutuhkan file sistem",
+    "Disable_AMFI":"Nonaktifkan AMFI",
+    "Model_Replacement":"Penggantian Model",
+    "System_Integrity_Protection_(SIP)":"Perlindungan integritas sistem (SIP)",
+    "Safe_boot_model":"Model Mesin Boot Aman",
+    "Note:Incompatible_with_driver_patches":"Catatan: Tidak kompatibel dengan\npatch driver",
+    "If_it_has_been_counterfeited,then_match_the_T2_model.":"Jika sudah dipalsukan, maka cocokkan\ndengan model T2.",
+    "Set_Apple_Secure_Boot_Model_Identifier":"Atur pengenal model keamanan Apple",
+    "Disable_resource_library_validation":"Matikan validasi pustaka sumber daya",
+    "SMBIOS_Replacement_Level":"SMBIOS Replacement Level",
+    "None":"Tidak ada",
+    "Minimal":"Minimal",
+    "Moderate":"Moderate",
+    "Supported_levels:" : "Level yang didukung:",
+    "- None:_None":"- Tidak ada : Tidak ada",
+    "- Small:_Board_ID.":"- Kecil : Board ID.",
+    "- Inside:_Change_Model.":"- Di dalam: Ganti Model",
+    "- Height:_Change_model_and_serial.":"- Tinggi: Ganti Model dan serial.",
+    "SMBIOS_Model_Replacement":"Penggantian Model SMBIOS",
+    "Prepare_a_fake_model":"Siapkan model palsu",
+    "Default":"Standar",
+    "Enables_replacement_of_natively_supported_Macs":"Memungkinkan penggantian Mac\nyang didukung secara natively",
+    "Allow_OpenCore_to_mimic_native":"Izinkan OpenCore meniru native",
+    "Supported_Mac.":"Mac yang didukung",
+    "Mainly_used_to_activate":"Terutama digunakan untuk mengaktifkan",
+    "Serial_number_overwrite":"Tulis ulang nomor seri",
+    "Patching":"Tambalan",
+    "Patch_root_directory":"Patch direktori root",
+    "TeraScale_2_Acceleration":"TeraScale 2 Akselerasi",
+    "Activating_AMD_TeraScale_2_GPU":"Mengaktifkan GPU AMD TeraScale 2",
+    "On_the_MacBookPro8,2_and":"Di MacBookPro8,2 dan",
+    "With_AppleALC.kext":"Dengan AppleALC.kext",
+    "Allow_the_installation_of_the_old_USB_environment_extension_patch":"Izinkan pemasangan patch ekstensi lingkungan USB lama",
+    "Acceleration_on_MacBookPro8,3.":"Percepatan pada MacBookPro8,3.",
+    "Activate_the_AppleHDA_driver_for_the_sound_card":"Aktifkan driver AppleHDA untuk kartu suara",
+    "Allowed_on_Tahoe_system_and_above":"Diizinkan pada sistem Tahoe dan di atasnya",
+    "This_is_disabled_by_default_because":"Ini dinonaktifkan secara default karena",
+    "This_GPU_model_has_common_failures.":"Model GPU ini memiliki kegagalan umum.",
+    "Allow_the_installation_of_the_old_HDA_environment_extension_patch":"Izinkan pemasangan patch ekstensi lingkungan HDA lama",
+    "Universal_Control_on_unsupported_Mac":"Kontrol Universal pada Mac yang\ntidak didukung",
+    "Installing_USB_Legacy_Environment_Extension":"Memasang Ekstensi Lingkungan USB Legacy",
+    "After_injecting_modifications_while_patching":"Setelah menyuntikkan modifikasi saat melakukan\npatch",
+    "Non-Metal_Configuration":"Konfigurasi Non-Metal",
+    "Dark_Mode_Menu":"Menu mode gelap",
+    "change":"Mengubah",
+    "App":"Aplikasi",
+    "Reverse_corresponds_to":"Pembalikan sesuai dengan",
+    "Current_set_SIP:":"Pengaturan SIP saat ini:",
+    "Currently_started_SIP:":"SIP yang sedang berjalan saat ini:",
+    "General":"Umum",
+    "Software_version":"Versi perangkat lunak",
+    "Software_Information":"Informasi perangkat lunak",
+    "Patch_support_package_version":"Versi paket dukungan patch",
+    "Software_Path":"Jalur perangkat lunak",
+    "Software_loading":"Memuat perangkat lunak",
+    "Startup_information":"Informasi pemula",
+    "Hardware_Information":"Informasi perangkat keras",
+    "beta_blur":"Beta blur",
+    "Beta_Menu_Bar":"Menu Bar Beta",
+    "Remove_unused_KDK":"Hapus KDK yang tidak digunakan",
+    "Ignore_app_updates":"Abaikan pembaruan aplikasi",
+    "Disabled_Report":"Nonaktifkan laporan",
+    "When_enabled,_the_patch_will_not_report_any_information_to_laobamac.":"Ketika diaktifkan, patch tidak akan melaporkan\ninformasi apapun kepada laobamac.",
+    "Disable_Beta_Rim":"Nonaktifkan Beta Rim",
+    "Statistics":"Statistik",
+    "Allow_native_models":"Izinkan model asli",
+    "WhenenabledtheapplicationwillremoveunusedKDKsfromthesystemduringrootdirectorypatching":"Saat diaktifkan, aplikasi akan menghapus KDK\nyang tidak digunakan dari sistem selama\npenambalan direktori root.",
+    "attention_this_option_should":"Opsi ini hanya boleh digunakan jika Mac Anda secara native mendukung sistem operasi yang ingin Anda jalankan. Jika Anda saat ini menjalankan sistem operasi yang tidak didukung, opsi ini akan mengakibatkan kegagalan boot. Beralih ke Mac native hanya untuk mengaktifkan fitur sistem operasi. Apakah Anda yakin ingin melanjutkan?",
+    "Allows_the_installation_of_OpenCore":"Memungkinkan instalasi OpenCore pada Mac yang\ndidukung secara natively. Perlu dicatat bahwa ini\ntidak akan memungkinkan versi macOS yang\ntidak didukung untuk diinstal di sistem Anda.",
+    "Control_the_application_of_widget_colors_on_the_desktop":"Kontrol penerapan warna widget desktop",
+    "Control_the_window_edge_rendering_effect":"Kontrol efek rendering tepi jendela",
+    "support_for_dynamic_color":"Dukungan untuk perubahan warna dinamis.\nCatatan: Pengaturan ini masih dalam tahap\npercobaan. Jika Anda mengalami masalah,\nsilakan nonaktifkan pengaturan ini.",
+    "Note:May_use_more_CPU_resources.":"Catatan: Mungkin menggunakan lebih banyak\nsumber daya CPU.",
+    "Control_window_blur_behaviour.":"Mengontrol perilaku buram jendela.",
+    "Solution_to_load_the_cursor_(rainbow_circle)":"Solusi memuat kursor (lingkaran pelangi)",
+    "If_the_Beta_menu_bar_is_activated,the_menu_bar_color_will_be_dynamic_as_needed":"Jika bilah menu Beta diaktifkan, warna bilah\nmenu akan dinamis sesuai dengan perubahan\nyang diperlukan.",
+    "Logout_is_required_to_apply_changes_to_SkyLight":"Logout diperlukan untuk menerapkan perubahan pada SkyLight",
+    "advanced":"Lanjutan"
 }
