--- a/oclp_mod/languages/zh_CN.json
+++ b/oclp_mod/languages/zh_CN.json
@@ -25,7 +25,7 @@
     "download_kdk": "下载KDK",
     "change_language": "🇨🇳 更改语言",
     "download_ml": "下载MetalLib",
-    "model_text": "型号: {model}, 由laobamac & satria ramadan修改",
+    "model_text": "型号: {model}, 由laobamac修改",
     "unsupported_config": "我们看到您当前正在为以下设备启动OpenCore: {model}\n\n我们构建的配置仅适用于特定设备。\n\n请构建并安装新的OpenCore配置，然后重新启动您的Mac。",
     "language_change_title": "更改语言",
     "language_change_prompt": "选择语言",
@@ -77,7 +77,7 @@
     "Outputverboseinformationupon_startup": "启动时输出详细信息",
     "Additional": "额外的",
     "Universal(effectivesustainability)": "通用的（有效的可持续性）",
-    "Use_the_DEBUG_version": "使用 OpenCore 的 DEBUG 版本，并启用额外的内核日志记录。",
+    "Use_the_DEBUG_version": "使用 OpenCore 的 DEBUG 版本\n并启用额外的内核日志记录。",
     "Target_model": "目标机型",
     "Host_model": "主机机型",
     "Causes_performance_degradation":"导致性能下降",
@@ -166,5 +166,113 @@
     "Retrieve_local_hard_drive_information":"取回本地硬盘信息",
     "AllowAppleALCtomanageaudioifapplicable.":"如果适用，允许AppleALC管理音频",
     "Themodelthatthepatcherisgoingtoimitate.": "覆写Patcher将要仿冒的机型",
-    "enable_fireware_driver": "启用 FireWire 驱动程序"
+    "enable_fireware_driver": "启用 FireWire 驱动程序",
+    "Various_kinds":"各种类型",
+    "Disable_Firmware_Throttling":"禁用固件限速",
+    "Caused_by_lack_of_hardware":"由缺少硬件引起",
+    "Forexample,missingmonitors,batteries,etc.":"例如缺少显示器、电池等",
+    "Disable_firmware-based_restrictions":"禁用基于固件的限制",
+    "Software_DeMUX":"软件 DeMUX",
+    "Note:Relevant_NVRAM_parameters_are_required:":"注意：需要相关的 NVRAM 参数：",
+    "Enable_software-based_DeMUX":"启用基于软件的 DeMUX",
+    "Prevent_the_faulty_dGPU_from_being_enabled.":"防止有故障的 dGPU 启用",
+    "Enable_unsupported_features":"启用不支持的功能",
+    "Due_to_encountering_unstable_memory.":"由于遇到内存不稳定",
+    "If_your_system_prompts_to_suggest_lowering":"如果您的系统提示建议降低",
+    "Configure_FeatureUnlock_level.":"配置 FeatureUnlock 等级.",
+    "Sleep_Plan":"休眠方案",
+    "Graphics_card":"显卡",
+    "AMD_GOP_injection":"AMD GOP 注入",
+    "Inject_AMD_GOP_to_display":"注入AMD GOP来显示",
+    "Start_screen":"启动界面",
+    "Cover_detected/hypothetical_MXM_graphics_card":"覆盖检测到的/假设的 MXM显卡",
+    "Applicable_to_MXM-based_iMacs.":"适用于MXM-based iMacs.",
+    "Graphics_card_overwrite":"显卡覆写",
+    "Nvidia_GOP_injection":"Nvidia GOP 注入",
+    "Inject_Nvidia_Kepler_GOP_for_sisplay":"注入Nvidia Kepler GOP来显示",
+    "Note:This_may_interrupt_from":"注意：这可能会中断从",
+    "Booting_from_an_external_hard_drive":"外置硬盘的启动",
+    "Prevent_sleep_issues":"防止休眠问题",
+    "Load_only_the_minimum_EFI_drivers":"仅加载最低 EFI 驱动程序",
+    "Applicable_to_MacBookPro8,2_and_MacBookPro8,3.":"适用于 MacBookPro8,2 和 MacBookPro8,3.",
+    "Security":"安全",
+    "Kernel_Security":"内核安全",
+    "Disable_resource_library_validation":"禁用资源库验证",
+    "When_the_system_files_are_needed":"的系统文件时需要",
+    "Disable_AMFI":"禁用 AMFI",
+    "Model_Replacement":"模型更换",
+    "Safe_boot_model":"安全启动机型",
+    "System_Integrity_Protection_(SIP)":"系统完整性保护（SIP）",
+    "SMBIOS_Replacement_Level":"SMBIOS 替换级别",
+    "None":"没有",
+    "Minimal":"最少的",
+    "Moderate":"适度",
+    "Supported_levels:" : "支持的级别:",
+    "- None:_None":"- 没有 : 没有",
+    "- Small:_Board_ID.":"- 小：板 ID.",
+    "- Inside:_Change_Model.":"- 在里面: 更换模型。",
+    "- Height:_Change_model_and_serial.":"- 高: 更换型号和序列号。",
+    "SMBIOS_Model_Replacement":"SMBIOS模型更换",
+    "Prepare_a_fake_model":"准备假模型",
+    "Default":"默认",
+    "Set_Apple_Secure_Boot_Model_Identifier":"设置 Apple 安全启动模型标识符",
+    "Note:Incompatible_with_driver_patches":"注意：与驱动补丁不兼容",
+    "If_it_has_been_counterfeited,then_match_the_T2_model.":"如果已经仿冒，则匹配 T2 模型",
+    "After_injecting_modifications_while_patching":"在打补丁时注入修改后",
+    "Allow_OpenCore_to_mimic_native":"允许 OpenCore 模仿原生",
+    "Supported_Mac.":"支持的Mac。",
+    "Mainly_used_to_activate":"主要用于激活",
+    "Serial_number_overwrite":"序列号覆写",
+    "Patching":"修补",
+    "Patch_root_directory":"修补根目录",
+    "TeraScale_2_Acceleration":"TeraScale 2 加速",
+    "Activating_AMD_TeraScale_2_GPU":"启用 AMD TeraScale 2 GPU",
+    "On_the_MacBookPro8,2_and":"在MacBookPro8,2和",
+    "Acceleration_on_MacBookPro8,3.":"MacBookPro8,3的加速。",
+    "This_is_disabled_by_default_because":"这默认是禁用的，因为",
+    "This_GPU_model_has_common_failures.":"这个模型GPU存在常见故障。",
+    "Allow_the_installation_of_the_old_HDA_environment_extension_patch":"允许安装旧版HDA环境的补丁扩展",
+    "Allowed_on_Tahoe_system_and_above":"在Tahoe及以上的系统上允许",
+    "Installing_USB_Legacy_Environment_Extension":"安装USB遗留环境扩展",
+    "With_AppleALC.kext":"与 AppleALC.kext 一起使用",
+    "Allow_the_installation_of_the_old_USB_environment_extension_patch":"允许安装旧版USB环境扩展补丁",
+    "Activate_the_AppleHDA_driver_for_the_sound_card":"启用AppleHDA驱动程序以支持声卡",
+    "Universal_Control_on_unsupported_Mac":"不支持的Mac上的通用控制",
+    "Enables_replacement_of_natively_supported_Macs":"允许替换本机支持的Mac电脑",
+    "Non-Metal_Configuration":"非金属配置",
+    "Dark_Mode_Menu":"黑暗模式",
+    "change":"改变",
+    "beta_blur":"测试模糊",
+    "App":"应用程序",
+    "General":"一般的",
+    "Beta_Menu_Bar":"测试菜单栏",
+    "Disable_Beta_Rim":"禁用Beta边缘",
+    "Ignore_app_updates":"忽略App更新",
+    "Disabled_Report":"禁用报告",
+    "Statistics":"统计",
+    "Software_version":"软件版本",
+    "Software_Information":"软件信息",
+    "Patch_support_package_version":"补丁支持包版本",
+    "Software_Path":"软件路径",
+    "Software_loading":"软件加载",
+    "Hardware_Information":"硬件信息",
+    "Startup_information":"启动信息",
+    "Reverse_corresponds_to":"反转对应于",
+    "Current_set_SIP:":"当前设置的SIP:",
+    "Currently_started_SIP:":"当前启动的SIP:",
+    "Remove_unused_KDK":"删除未使用的KDK",
+    "WhenenabledtheapplicationwillremoveunusedKDKsfromthesystemduringrootdirectorypatching":"启用后，应用程序将在根目录修补期间从系统中\n删除未使用的KDK。",
+    "When_enabled,_the_patch_will_not_report_any_information_to_laobamac.":"启用时，该补丁将不会向 laobamac\n报告任何信息。",
+    "Allow_native_models":"允许本地模型",
+    "attention_this_option_should":"此选项仅应在您的Mac本机支持您要运行的操作系统时使用。如果您当前正在运行不受支持的操作系统，此选项将导致启动失败。仅切换到本机Mac以启用操作系统功能。您确定要继续吗？",
+    "Allows_the_installation_of_OpenCore":"允许在原生支持的Mac上安装OpenCore。请注意,\n这将不允许在您的系统上安装不支持的macOS版本。",
+    "Control_the_application_of_widget_colors_on_the_desktop":"控制桌面小工具的颜色应用",
+    "Control_the_window_edge_rendering_effect":"控制窗口边缘渲染效果",
+    "support_for_dynamic_color":"支持动态颜色变化。注意:\n此设置仍处于实验阶段。如果您遇到任何问题,\n请禁用此设置。",
+    "Control_window_blur_behaviour.":"控制窗口模糊行为。",
+    "Note:May_use_more_CPU_resources.":"注意：可能会使用更多的CPU资源。",
+    "Solution_to_load_the_cursor_(rainbow_circle)":"解决方案加载光标（彩虹圆圈)",
+    "If_the_Beta_menu_bar_is_activated,the_menu_bar_color_will_be_dynamic_as_needed":"如果启用了Beta菜单栏,\n菜单栏的颜色将根据需要动态变化。",
+    "Logout_is_required_to_apply_changes_to_SkyLight":"退出需要应用于SkyLight的更改",
+    "advanced":"高级"
 }  
