--- a/oclp_mod/languages/en_US.json
+++ b/oclp_mod/languages/en_US.json
@@ -25,7 +25,7 @@
     "download_kdk": "Download KDK",
     "change_language": "🇺🇸 Change Language",
     "download_ml": "Download MetalLib",
-    "model_text": "Model: {model}, modified by laobamac & satria ramadan",
+    "model_text": "Model: {model}, modified by laobamac",
     "unsupported_config": "We see you're currently booting OpenCore for: {model}\n\nWe build configurations to match individual units and cannot be used with different Macs.\n\nPlease build and install a new OpenCore configuration and then restart your Mac.",
     "language_change_title": "Change Language",
     "language_change_prompt": "Select Language",
@@ -166,5 +166,113 @@
     "DisabledonlywhenthehostlackstheGOPROM.":"Disabled only when the host lacks the\nGOP ROM.",
     "Themodelthatthepatcherisgoingtoimitate.":"The model that the patcher is going to imitate.",
     "Disabled_by_default":"Disabled by default, as it may occur from the\nwake state on certain systems.",
-    "enable_fireware_driver":"Enable FireWire Driver"
+    "enable_fireware_driver":"Enable FireWire Driver",
+    "Various_kinds":"Various kinds",
+    "Disable_Firmware_Throttling":"Disable Firmware Throttling",
+    "Caused_by_lack_of_hardware":"Caused by lack of hardware",
+    "Forexample,missingmonitors,batteries,etc.":"For example, missing monitors, batteries, etc.",
+    "Disable_firmware-based_restrictions":"Disable firmware-based restrictions",
+    "Software_DeMUX":"Software DeMUX",
+    "Enable_software-based_DeMUX":"Enable software-based DeMUX",
+    "Note:Relevant_NVRAM_parameters_are_required:":"Note: Relevant NVRAM parameters are required:",
+    "Prevent_the_faulty_dGPU_from_being_enabled.":"Prevent the faulty dGPU from being enabled.",
+    "Enable_unsupported_features":"Enable unsupported features",
+    "Due_to_encountering_unstable_memory.":"Due to encountering unstable memory.",
+    "If_your_system_prompts_to_suggest_lowering":"If your system prompts to suggest lowering",
+    "Configure_FeatureUnlock_level.":"Configure FeatureUnlock level.",
+    "Sleep_Plan":"Sleep Plan",
+    "Graphics_card":"Graphics card",
+    "AMD_GOP_injection":"AMD GOP injection",
+    "Inject_AMD_GOP_to_display":"Inject AMD GOP to display",
+    "Start_screen":"Start screen",
+    "Nvidia_GOP_injection":"Nvidia GOP injection",
+    "Inject_Nvidia_Kepler_GOP_for_sisplay":"Inject Nvidia Kepler GOP for display",
+    "Graphics_card_overwrite":"Graphics card overwrite",
+    "Applicable_to_MXM-based_iMacs.":"Applicable to MXM-based iMacs.",
+    "Cover_detected/hypothetical_MXM_graphics_card":"Cover detected/hypothetical MXM\ngraphics card",
+    "Booting_from_an_external_hard_drive":"Booting from an external hard drive",
+    "Note:This_may_interrupt_from":"Note: This may interrupt from",
+    "Prevent_sleep_issues":"Prevent sleep issues",
+    "Load_only_the_minimum_EFI_drivers":"Load only the minimum EFI drivers",
+    "Applicable_to_MacBookPro8,2_and_MacBookPro8,3.":"Applicable to\nMacBookPro8,2 And MacBookPro8,3.",
+    "Security":"Security",
+    "Kernel_Security":"Kernel Security",
+    "When_the_system_files_are_needed":"When the system files are needed",
+    "Disable_AMFI":"Disable AMFI",
+    "Model_Replacement":"Model Replacement",
+    "Safe_boot_model":"Safe boot model",
+    "Reverse_corresponds_to":"Reverse corresponds to",
+    "Current_set_SIP:":"Current set SIP:",
+    "Currently_started_SIP:":"Currently started SIP:",
+    "System_Integrity_Protection_(SIP)":"System Integrity Protection (SIP)",
+    "Set_Apple_Secure_Boot_Model_Identifier":"Set Apple Secure Boot Model Identifier",
+    "Note:Incompatible_with_driver_patches":"Note: Incompatible with driver patches",
+    "If_it_has_been_counterfeited,then_match_the_T2_model.":"If it has been counterfeited, then match the T2 model.",
+    "Disable_resource_library_validation":"Disable resource library validation",
+    "SMBIOS_Replacement_Level":"SMBIOS Replacement Level",
+    "None":"None",
+    "Minimal":"Minimal",
+    "Moderate":"Moderate",
+    "Supported_levels:" : "Supported levels:",
+    "- None:_None":"- None: None",
+    "- Small:_Board_ID.":"- Small: Board ID.",
+    "- Inside:_Change_Model.":"- Inside: Change Model.",
+    "- Height:_Change_model_and_serial.":"- Height: Change model and serial.",
+    "SMBIOS_Model_Replacement":"SMBIOS Model Replacement",
+    "Prepare_a_fake_model":"Prepare a fake model",
+    "Default":"Default",
+    "Supported_Mac.":"Supported Mac.",
+    "Mainly_used_to_activate":"Mainly used to activate",
+    "Serial_number_overwrite":"Serial number overwrite",
+    "Patching":"Patching",
+    "Patch_root_directory":"Patch root directory",
+    "TeraScale_2_Acceleration":"TeraScale 2 Acceleration",
+    "Activating_AMD_TeraScale_2_GPU":"Activating AMD TeraScale 2 GPU",
+    "On_the_MacBookPro8,2_and":"On the MacBookPro8,2 and",
+    "Acceleration_on_MacBookPro8,3.":"Acceleration on MacBookPro8,3.",
+    "This_is_disabled_by_default_because":"This is disabled by default because",
+    "Universal_Control_on_unsupported_Mac":"Universal Control on unsupported Mac",
+    "Enables_replacement_of_natively_supported_Macs":"Enables replacement of natively supported Macs",
+    "Allow_OpenCore_to_mimic_native":"Allow OpenCore to mimic native",
+    "Allowed_on_Tahoe_system_and_above":"Allowed on Tahoe system and above",
+    "With_AppleALC.kext":"With AppleALC.kext",
+    "Installing_USB_Legacy_Environment_Extension":"Installing USB Legacy Environment Extension",
+    "Allow_the_installation_of_the_old_USB_environment_extension_patch":"Allow the installation of the old USB environment extension patch.",
+    "Activate_the_AppleHDA_driver_for_the_sound_card":"Activate the AppleHDA driver for the sound card",
+    "Allow_the_installation_of_the_old_HDA_environment_extension_patch":"Allow the installation of the old HDA environment extension patch",
+    "This_GPU_model_has_common_failures.":"This GPU model has common failures.",
+    "After_injecting_modifications_while_patching":"After injecting modifications while patching",
+    "Non-Metal_Configuration":"Non-Metal Configuration",
+    "Dark_Mode_Menu":"Dark Mode Menu",
+    "change":"Change",
+    "beta_blur":"Beta blur",
+    "App":"App",
+    "General":"General",
+    "Beta_Menu_Bar":"Beta Menu Bar",
+    "Allow_native_models":"Allow native models",
+    "Control_the_application_of_widget_colors_on_the_desktop":"Control the application of widget\ncolors on the desktop",
+    "Disable_Beta_Rim":"Disable Beta Rim",
+    "Ignore_app_updates":"Ignore app updates",
+    "Disabled_Report":"Disabled Report",
+    "Statistics":"Statistics",
+    "Software_version":"Software version",
+    "Software_Information":"Software Information",
+    "Patch_support_package_version":"Patch support package version",
+    "Software_Path":"Software Path",
+    "Software_loading":"Software loading",
+    "Startup_information":"Startup information",
+    "Hardware_Information":"Hardware Information",
+    "Remove_unused_KDK":"Remove unused KDK",
+    "WhenenabledtheapplicationwillremoveunusedKDKsfromthesystemduringrootdirectorypatching":"When enabled, the application will remove\nunused KDKs from the system during root\ndirectory patching.",
+    "When_enabled,_the_patch_will_not_report_any_information_to_laobamac.":"When enabled, the patch will not report any\ninformation to laobamac.",
+    "attention_this_option_should":"This option should only be used when your Mac natively supports the operating system you want to run.If you are currently running an unsupported operating system, this option will result in a boot failure.Switch to native Mac only to enable operating system features.Are you sure you want to continue?",
+    "Allows_the_installation_of_OpenCore":"Allows the installation of OpenCore on natively\nsupported Macs. Note that this will not allow\nunsupported macOS versions to be installed\non your system.",
+    "Control_the_window_edge_rendering_effect":"Control the window edge rendering effect",
+    "support_for_dynamic_color":"Support for dynamic color changes. Note:\nThis setting is still experimental. If you\nencounter any issues, please disable\nthis setting.",
+    "Note:May_use_more_CPU_resources.":"Note: May use more CPU resources.",
+    "Control_window_blur_behaviour.":"Control window blur behaviour.",
+    "Solution_to_load_the_cursor_(rainbow_circle)":"Solution to load the cursor (rainbow circle)",
+    "If_the_Beta_menu_bar_is_activated,the_menu_bar_color_will_be_dynamic_as_needed":"If the Beta menu bar is activated, the menu bar\ncolor will be dynamic as needed change.",
+    "Logout_is_required_to_apply_changes_to_SkyLight":"Logout is required to apply changes to SkyLight.",
+    "advanced":"Advanced"
 }
